Layout bug fixed

--- a/_sass/modules/_nav.scss
+++ b/_sass/modules/_nav.scss
@@ -112,6 +112,7 @@ nav {
   .expander-group {
     box-shadow: none !important;
     padding: 0 !important;
+    margin-bottom: 0;
     button.expander-toggle {
       font-family: $sans, sans-serif;
       font-size: 1rem;
